# ArgParser

./: passman.py  pyproject.toml  requirements.txt
src/passman/: __init__.py  dbhandler.py  passman.py
